package model;

public class Bike extends Vehicle {

    public Bike(String plate) {
        super(plate, VehicleType.BIKE);
    }

}
