package model;

public class Car extends Vehicle {

    public Car(String plate) {
        super(plate,VehicleType.CAR);
    }
}

