package model;

public class Truck extends Vehicle {

    public Truck(String plate) {
        super(plate, VehicleType.TRUCK);
    }

}
