package model;

public enum VehicleType {
    CAR,BIKE,TRUCK;
}
